[package]
description = "Rust SDK for Zero secrets manager."
license = "MIT"
name = "zero-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
httpmock = "0.6.6"
num = "0.4"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
ureq = { version = "2.4.0", features = ["json", "charset"] }
